Commit inicial con proyecto casi acabado

--- a/src/app/actividad/actividad.component.html
+++ b/src/app/actividad/actividad.component.html
@@ -1,1 +1,14 @@
-<p>actividad works!</p>
+<tr>
+    <td>
+        {{fecha}}
+    </td>
+    <td>
+        {{lugar}}
+    </td>
+    <td>
+        {{monitor}}
+    </td>
+    <td>
+        {{tipo}}
+    </td>
+</tr>
