--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <app-menu></app-menu>
 <div class="text-center">
-  <h1 class="title">
+  <h1 class="title mt-3">
     Menu
   </h1>  
-
-  <table class="table">
-    
-  </table>
+  <div class="row pt-5">
+    <div class="col-1"></div>
+    <div class="col-10">
+      <tabla></tabla>
+    </div>
+  </div>
 </div>
