--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,10 @@
-<app-menu></app-menu>
+<app-menu class="sticky-top"/>
 <div class="text-center">
-  <h1 class="title mt-3">
-    Menu
-  </h1>  
+  <portada id="portada"></portada> 
   <div class="row pt-5">
     <div class="col-1"></div>
     <div class="col-10">
-      <tabla></tabla>
+      <tabla id="actividades"/>
     </div>
   </div>
 </div>
