--- a/src/app/tabla/tabla.component.html
+++ b/src/app/tabla/tabla.component.html
@@ -1,24 +1,15 @@
 <div class="card">
     <div class="card-body text-center">
         <h1>
-            Actividades GYM 4V
+            Actividades GYM 4V:
         </h1>
-        <table class="table mt-5">
-            <thead>
-                <tr>
-                    <th scope="col">Fecha</th>
-                    <th scope="col">Lugar</th>
-                    <th scope="col">Monitor</th>
-                    <th scope="col">Tipo</th>
-                </tr>
-            </thead>
-            <tbody class="table-group-divider">
-
-                @for (actividad of actividades; track $index){
-                    <actividad_component [actividad]="actividad"></actividad_component>
-                }
-
-            </tbody>
-        </table>
+        <div class="container" >
+            <div class="row">
+                <div class="col-lg-3 col-md-4 col-sm-6" *ngFor="let actividad of actividades">
+                    <ActividadComponent [actividad]="actividad"/>
+                  </div>   
+            </div>
+        </div>
+        
     </div>
 </div>
